# learn-optix7

./: .gitignore  CMakeLists.txt  README.md  defines.h  defines.h.in
01-helloOptix/: CMakeLists.txt  main.cpp  optix7.h
02-pipelineAndRayGen/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  device_programs.ptx  main.cpp
03-inGLFWindow/: CMakeLists.txt  GLFWindow.h  SampleRenderer.cpp  device_programs.cu  device_programs.ptx  main.cpp
04-firstTriangleMesh/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  device_programs.ptx  main.cpp
05-firstSBTData/: CMakeLists.txt  GLFWindow.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  main.cpp  optix7.h
06-multipleObjects/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  main.cpp
07-firstRealModel/: CMakeLists.txt  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.ptx  main.cpp
08-addingTextures/: CMakeLists.txt  GLFWindow.h  LaunchParams.h  Model.h  SampleRenderer.cpp  device_programs.cu  device_programs.ptx  main.cpp
09-shadowRays/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  device_programs.ptx
10-softShadows/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  device_programs.ptx  main.cpp  random.h
11-denoiseColorOnly/: CMakeLists.txt  CUDAModule.h  GLFWindow.h  LaunchParams.h  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  device_programs.cu  device_programs.ptx  main.cpp  optix7.h
12-denoiseSeparateChannels/: CMakeLists.txt  CUDABuffer.h  CUDAKernel.h  CUDAModule.cpp  CUDAModule.h  GLFWindow.cpp  GLFWindow.h  LaunchParams.h  Model.h  SampleRenderer.cpp  SampleRenderer.h  device_programs.ptx  main.cpp  optix7.h  toneMap.cu  toneMap.cu.debug.ptx  toneMap.lib  toneMap.ptx
cmake/: FindOptiX.cmake
dep/: CMakeLists.txt
